[package]
name = "frontier_kernel"
version = "0.1.0"
authors = ["Cimang Jiang <joshua.olin@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sbi = "0.2.0"
cfg-if = "0.1.10"
enum-group = "0.1.2"
thiserror-no-std = "2.0.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[features]
default = ["board_qemu"]
board_qemu = []