[package]
name = "frontier_kernel"
version = "0.1.0"
authors = ["Cimang Jiang <joshua.olin@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
sbi = "0.2.0"
spin = "0.9.8"
libm = "0.2.7"
riscv = "0.11.1"
bitflags = "2.4.0"
cfg-if = "1.0.0"
bit_field = "0.10.2"
enum-group = "0.1.2"
thiserror-no-std = "2.0.2"
buddy_system_allocator = "0.9.0"
# virtio-drivers = "0.7.1"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
elf = { version = "0.7.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
frontier_lib = { path = "../frontier_lib" }
frontier_fs = { path = "../frontier_fs" }

[features]
default = ["board_qemu", "mmu_sv39"]
board_qemu = []
mmu_sv39 = []

[profile.release]
debug = true
opt-level = 3
